5/2/12
  Changed floating transient window behaviour to always be on top.

4/2/12
  Added borders to transient windows

3/2/12
  Fix for bar length and master size not correcting after rc file is reread
  Added option in config.h.def to have the bar shown or not at startup but still toggleable

31/1/12
  Fix for bar text not updating when bar is covered and the uncovered

19/1/12
  Desktop switcher updates now when bar switched from top/bottom
  Changing border width does not affect the bar

16/1/12
  Added more options to the rc file
  Fix for mode not displaying correctly at startup if now window is opened

14/1/12
  Added alpha value for unfocused windows to be semi transparent when cairo-compmgr is used
  Alpha value can be set in the rc file

9/1/12
  Master area is reset if second last window is removed

7/1/12
  Fixed wm crash if not using status bar and resize of stack top window only if 3 or more windows
  Fix for window sizes after the window at the top of the stack has been resized
  Added limits on the area of the master window 
  Fix for thunderbird write window( and others probably) just unmapping

4/1/12
  Statusbar text now has 5 colours

29/12/11
  Statusbar takes text from stdin (e.g. conky)

29/12/11
  Added the tiling mode shown in the status bar

28/12/11
  Fixed rereading the rc file killing the wm or messing with the keyboard shortcuts

8/12/11
  Fixes for fullscreen mode

7/12/11
  Fix for fonts not displaying properly

6/12/11/
  Desktop labels changeable from the rc file

5/12/11
  If a window is opened or closed on an unfocused desktop the desktop switcher will be updated

4/12/11
  Dessktops in the desktop switcher can be named from the config file

1/12/11
  Colours and font are now read from a rc file and can be update with a keyboard shortcut

30/11/11
  Added bar with desktop switcher and statusbar

28/11/11
  Replaced next/prev_desktop function with shorter rotate_desktop function
  (thanks to c00kiemon5ter)

28/11/11