@@ -1,4 +1,4 @@
-// bar.c [ 0.3.4 ]
+// bar.c [ 0.3.5 ]
 
 /* ************************** Status Bar *************************** */
 void setup_status_bar() {
