@@ -1,5 +1,9 @@
+6/2/12
+  Fixed apps with tabs opening blank windows when opened on an unfocused desktop e.g. firefox
+
 5/2/12
   Changed floating transient window behaviour to always be on top.
+  Fixed last window not being mapped sometimes in fullscreen mode
 
 4/2/12
   Added borders to transient windows
